<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <GridLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:rowCount="4">

        <TextView
            android:id="@+id/text_Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:textSize="35dp" />

        <GridLayout
            android:id="@+id/gl_AnswerYesNoContainer"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_row="1"
            android:columnCount="2">
            <Button
                android:id="@+id/btn_AnswerYes"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/Option_True_String"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_AnswerNo"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/Option_False_String"
                android:textSize="30dp" />
        </GridLayout>

        <RadioGroup
            android:id="@+id/rg_AnswerQuestionLevel"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_row="2"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButton_Question_Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_Level_Light_String"
                android:textSize="30dp"/>
            <RadioButton
                android:id="@+id/radioButton_Question_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_Level_Medium_String"
                android:layout_marginLeft="80dp"
                android:textSize="30dp"/>
            <RadioButton
                android:id="@+id/radioButton_Question_Heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/question_Level_Heavy_String"
                android:textSize="30dp"/>
            <RadioButton
                android:id="@+id/radioButton_Question_Serious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/question_Level_Serious_String"
                android:textSize="30dp"/>
        </RadioGroup>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="0"
            android:columnCount="3">

            <Button
                android:id="@+id/btn_PreQuestion"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:enabled="false"
                android:text="@string/Option_Previous_String"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_SubmitResult"
                android:visibility="invisible"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="5dp"
                android:enabled="true"
                android:text="@string/Option_Submit_String"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btn_NextQuestion"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_marginRight="5dp"
                android:text="@string/Option_Next_String"
                android:layout_gravity="right"
                android:textSize="30dp" />

        </GridLayout>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar_Submitting"
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>