<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:rowCount="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/assessed_Result_Title"
            android:textSize="35dp"></TextView>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="0"
            android:rowCount="2">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:columnCount="6">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_rowWeight="1"
                    android:text="@string/txt_ChildInfo_Name_String"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:id="@+id/textView_result_Child_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="3"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_rowWeight="1"
                    android:text="@string/txt_ChildInfo_Sex_String"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:id="@+id/textView_result_Child_Sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="3"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="4"
                    android:layout_rowWeight="1"
                    android:text="@string/txt_ChildInfo_Age_String"
                    android:textSize="30dp">
                </TextView>
                <TextView
                    android:id="@+id/textView_result_Child_Age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="5"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="3"
                    android:textSize="30dp">
                </TextView>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:columnCount="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:text="@string/txt_ChildInfo_AssessingDate_String">
                </TextView>
                <TextView
                    android:id="@+id/textView_result_Child_AssessedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:textSize="30dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:textSize="30dp"
                    android:text="@string/assessed_Result_ABCScore_Title">
                </TextView>
                <TextView
                    android:id="@+id/textView_result_Child_AssessedScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_column="3"
                    android:layout_columnWeight="1"
                    android:textSize="30dp">
                </TextView>
            </GridLayout>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="2"
            android:layout_column="0"
            android:textSize="30dp"
            android:text="@string/assessed_Result_Analysis_Title" />
        <TextView
            android:id="@+id/textView_result_Analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:textSize="30dp">

        </TextView>

        <Button
            android:id="@+id/btn_End_Assessing"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="30dp"
            android:text="@string/Option_EndAssessing_String">
        </Button>

    </GridLayout>

</android.support.constraint.ConstraintLayout>