<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:rowCount="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/ChildInfo_Welcome_String"
            android:textSize="35dp">
        </TextView>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_rowWeight="1"
            android:rowCount="3"
            android:columnCount="4">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:text="@string/txt_ChildInfo_Name_String"
                android:textSize="35dp">
            </TextView>
            <EditText
                android:id="@+id/txt_Child_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="5"
                android:layout_gravity="center_vertical"
                android:textSize="35dp"
                android:maxLength="15"
                android:ems="3"
                android:layout_marginRight="15dp"
                android:inputType="textPersonName"
                android:layout_rowWeight="1">
            </EditText>

            <TextView
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:text="@string/txt_ChildInfo_Sex_String"
                android:textSize="35dp">
            </TextView>

            <Spinner
                android:id="@+id/spinner_Child_Sex"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="5"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/sexArrays"
                android:gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:spinnerMode="dropdown">
            </Spinner>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="right"
                android:layout_rowWeight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_ChildInfo_Age_String"
                android:textSize="35dp">
            </TextView>

            <EditText
                android:id="@+id/txt_Child_Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="5"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:textSize="35dp"
                android:layout_rowWeight="1">
            </EditText>

            <TextView
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:text="@string/txt_ChildInfo_Preparer_String"
                android:textSize="35dp">
            </TextView>
            <Spinner
                android:id="@+id/spinner_Child_Preparer"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="5"
                android:gravity="center_vertical"
                android:layout_rowWeight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dropdown"
                android:entries="@array/preparerArrays">
            </Spinner>

            <!--<TextView-->
                <!--android:layout_row="1"-->
                <!--android:layout_column="2"-->
                <!--android:layout_columnWeight="1"-->
                <!--android:layout_rowWeight="1"-->
                <!--android:layout_gravity="right"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/txt_ChildInfo_Birthday_String"-->
                <!--android:textSize="35dp">-->
            <!--</TextView>-->

            <!--<GridLayout-->
                <!--android:layout_row="1"-->
                <!--android:layout_column="3"-->
                <!--android:layout_columnWeight="5"-->
                <!--android:layout_rowWeight="1"-->
                <!--android:columnCount="2">-->
                <!--<TextView-->
                    <!--android:id="@+id/txt_Child_Birthday"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:layout_column="0"-->
                    <!--android:layout_columnWeight="1"-->
                    <!--android:textSize="35dp">-->
                <!--</TextView>-->
                <!--<TextView-->
                    <!--android:id="@+id/txt_RightArrow"-->
                    <!--android:layout_width="20dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:layout_column="1"-->
                    <!--android:textSize="35dp"-->
                    <!--android:text="@string/Option_Right_Arrow_String">-->

                <!--</TextView>-->
            <!--</GridLayout>-->

            <!--<TextView-->
                <!--android:layout_row="2"-->
                <!--android:layout_column="2"-->
                <!--android:layout_columnWeight="1"-->
                <!--android:layout_rowWeight="1"-->
                <!--android:layout_gravity="right"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/txt_ChildInfo_AssessingDate_String"-->
                <!--android:textSize="35dp">-->
            <!--</TextView>-->

            <!--<TextView-->
                <!--android:id="@+id/txt_Child_Assessed_Date"-->
                <!--android:layout_row="2"-->
                <!--android:layout_column="3"-->
                <!--android:layout_columnWeight="5"-->
                <!--android:gravity="center_vertical"-->
                <!--android:layout_rowWeight="1"-->
                <!--android:textSize="35dp">-->
            <!--</TextView>-->

        </GridLayout>

        <Button
            android:id="@+id/btn_StartAnswering"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="right"
            android:textSize="35dp"
            android:text="@string/btn_StartAnswer_String">

        </Button>

    </GridLayout>

</android.support.constraint.ConstraintLayout>